fixed spacing issues

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,7 +15,7 @@
 
   .options {
     width: 90%;
-    height: 30%;
+    height: 60%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
